Updated spring boot version